# chat-langchain

./: .gitignore  AUTH_IMPLEMENTATION_GUIDE.md  BALI_EVENT_LANGSMITH_GUIDE.md  BUBBLE_API_REALITY.md  BUBBLE_INTEGRATION_SETUP.md  BUBBLE_SETUP.md  CLAUDE.md  DATA_FLOW_ARCHITECTURE.md  DEPLOYMENT.md  DUST_FEATURE_ANALYSIS.md  FUTURE_TEAM_PERMISSION_SYSTEM_DESIGN.md  LANGSMITH.md  LANGSMITH_GUIDE.md  LANGSMITH_PROMPTS_COPY_PASTE.md  LANGSMITH_PROMPTS_SETUP.md  MODIFY.md  Makefile  PERMISSION_SYSTEM.md  PRODUCTION.md  README.md  TEAM_PERMISSION_SYSTEM_DESIGN.md  TESTING_STRATEGY.md  TRAINING_LANGSMITH_IMPLEMENTATION.md  TRAINING_MODULE_ENHANCEMENTS.md  USER_GUIDE.md  VENUE_CHATBOT_SETUP_SUMMARY.md  bubble_api_explorer.py  bubble_bali_users.sql  bubble_data_mapping_strategy.md  bubble_datatypes.json  bubble_ingestion_pipeline_design.md  bubble_loader_no_db.py  bubble_schema_analysis.md  bubble_sync.sql  bubble_venue_ingestion.py  check_bubble_emails.py  check_existing_tables.sql  check_langsmith_setup.py  check_training_config.py  create_langsmith_dataset.py  (+53 more)
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
_scripts/: clear_index.py
backend/: ENABLE_ISSUE_INDEXING.md  FETCH_CATEGORIES_INSTRUCTIONS.md  PROMPT_UPDATE_SUMMARY.md  UPDATE_CATEGORY_IDS.md  __init__.py  analyze_existing_inbox_data.py  analyze_inbox_data.py  bubble_categories_actual.json  bubble_loader.py  category_id_mapping.json  check_enhanced_fields.py  check_inbox_event_codes.py  check_inbox_messages.py  check_issue_fields.py  check_issue_ingestion_history.py  check_issue_source_types.py  check_private_issues_simple.py  check_prompts.py  check_vector_db_privacy.py  configuration.py  conftest.py  create_category_mapping.py  create_prompt_tables.sql  create_tables.py  data_loaders.py  discover_ecommerce_data.py  discover_event_ecosystem.py  discover_inbox_data.py  discover_issue_categories.py  discover_issue_data.py  discover_training_tables.py  ecommerce_data_discovery.json  embeddings.py  event_ecosystem_discovery.json  fetch_issue_categories.py  find_private_field.py  (+49 more)
(+205 files in other folders)
