[tool.poetry]
name = "chat-langchain"
version = "0.1.1"
description = ""
authors = ["SN <6432132+samnoyes@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = ">=0.3.0,<0.4.0"
langsmith = ">=0.3.42" 
langchain-google-genai = ">=2.1.2,<3.0.0"
langchain-core = ">=0.3.10,<0.4.0"
langchain-community = ">=0.3.0,<0.4.0"
langchain-openai = ">=0.3.12,<0.4.0"
langchain-anthropic = ">=0.3.10,<0.4.0"
langchain-pinecone = ">=0.1.2"
langgraph = ">=0.4.5"
beautifulsoup4 = "^4.12.2"
pinecone = ">=5.0.0"
lxml = "^4.9.3"
voyageai = "^0.1.4"
pillow = "^10.2.0"
# do not remove this, it's used for indexing
psycopg2-binary = "^2.9.9"
supabase = "^2.4.0"

[tool.poetry.group.dev.dependencies]
langgraph-sdk = ">=0.1.61,<0.2.0"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",  
    "e2e: mark test as an end-to-end test",
    "slow: mark test as slow running",
    "requires_api: mark test as requiring external API access",
]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage settings
addopts = "--cov=backend --cov-report=html --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
